# tool-suggester

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start_demo.py
.github/workflows/: ci.yml
examples/react-demo/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
examples/react-demo/components/: ChatBubble.tsx  SettingsSidebar.tsx  SuggestionItem.tsx
examples/react-demo/services/: configService.ts  geminiService.ts  suggestionService.ts  websocketService.ts
src/suggester/: __init__.py  engine.py  inverted_index.py  ranking.py  schemas.py  tokenizer.py  trie.py
src/suggester/adapters/: react_gateway.py  streamlit.py
tests/: test_engine.py  test_engine_free_text.py  test_engine_multi_intent.py  test_engine_strict.py  test_inverted_index.py  test_tokenizer.py  test_trie.py
